--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -14,6 +14,7 @@ a {
     }
 
     &.button-inactive {
+        opacity: 0.5;
         font-weight: bold;
         text-decoration: none;
         color: $abyss;
