Hid scroll bars on on-deck stream iframes.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -41,6 +41,10 @@ div {
         text-align: center;
         white-space: nowrap;
     }
+
+    &.on-deck-stream {
+        overflow: hidden;
+    }
 }
 
 h1 {
