--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -4,7 +4,7 @@
     <%= render 'partials/google_analytics_init' %>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid flex-container">
     <div class="row">
         <div class="col-md-12" id="stream-switch-tabs">
             <span>Switch to...</span>
@@ -27,7 +27,7 @@
         <!-- Stream queue -->
         <div class="row">
             <div class="col-md-12" id="stream-queue" style="float: left;">
-                <% @streamers[ 1..-1 ].select { | streamer | streamer[ 'status' ] == 'online' }.each do | streamer | %>
+                <% @streamers[ 1..-1 ].each do | streamer | %>
                     <iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=<%= streamer[ 'name' ] %>&auto_play=true&muted=true" width="19%"></iframe>
                 <% end %>
             </div>
@@ -56,28 +56,6 @@
         // Make sure the switch buttons don't disappear behind the beta tag.
         // TODO: Needs to be removed when we leave beta!
         $( '#stream-switch-tabs' ).width( $( window ).width() - $( '.beta' ).width() );
-    }
-
-    /*
-     * Replaces streamers according to the passed-in Array of names
-     */
-    var replace_streamers = function ( streamers ) {
-        console.log( 'Passed streamers: ' + streamers );
-        var streamers = JSON.parse( streamers );
-
-        // Replace main streamer
-        $( '#main-stream-player' ).attr( 'src', 'http://player.twitch.tv/?channel=' + streamers[ 0 ].name + '&auto_play=true&muted=false' );
-        $( '#chat' ).attr( 'src', 'https://twitch.tv/' + streamers[ 0 ].name + '/chat?popout=' );
-        streamers.shift();
-
-        // Replace on-deck streamers
-        $( '#stream-queue' ).empty();
-        $.each( streamers, function ( name, status ) {
-            if( status == 'online' ) {
-                $( '#stream-queue' ).append( '<iframe class="on-deck-stream" src="http://player.twitch.tv/?channel=' + name + '&auto_play=true&muted=true" width="19%"></iframe>' );
-            }
-        } );
-        update_height();
     }
 
     // Whenever the window resizes, re-adjust the height of the main player div.
