--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -11,7 +11,7 @@ a {
         border: 1px solid #cccccc;
         border-right-color: #333333;
         border-bottom-color: #333333;
-    }
+}
 
     &.button-inactive {
         @extend .button;
@@ -29,15 +29,14 @@ body {
 }
 
 div {
-    // TODO: Remove
-    //&#stream-queue {
-    //    display: inline-block;
-    //    float: left;
-    //    overflow-x: auto;
-    //    overflow-y: hidden;
-    //    text-align: center;
-    //    white-space: nowrap;
-    //}
+    &#stream-queue {
+        display: inline-block;
+        float: left;
+        overflow-x: auto;
+        overflow-y: hidden;
+        text-align: center;
+        white-space: nowrap;
+    }
 
     &.on-deck-stream {
         overflow: hidden;
@@ -59,25 +58,22 @@ p {
     }
 }
 
-/*
- * Flex settings
- */
-div {
-    &.flex-container {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: flex-start;
+span {
+    &.button {
+        font-weight: bold;
+        text-decoration: none;
+        background-color: $dark-purple;
+        padding: 2px 6px 2px 6px;
+        border: 1px solid #cccccc;
+        border-right-color: #333333;
+        border-bottom-color: #333333;
     }
 
-    &#main-stream {
-        order: 1;
-        flex-basis: 80%;
-    }
-
-    &#chat {
-        order: 2;
-        flex-basis: 20%;
+    &.button-inactive {
+        @extend .button;
+        opacity: 0.5;
+        color: $dark-purple;
+        background-color: $dark-gray;
+        pointer-events: none;
     }
 }
