--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -43,7 +43,8 @@
      * Resizes the video players so that there is no vertical scrolling needed.
      */
     var update_height = function () {
-        var available_space_height = $( window ).height() - $( '#stream-switch-tabs' ).height() * 2;
+        var horizontal_scrollbar_height = 17;
+        var available_space_height = $( window ).height() - horizontal_scrollbar_height - $( '#stream-switch-tabs' ).height() * 2;
 
         // Re-calculate heights and apply them.
         $( '#main-stream-player' ).height( available_space_height * 0.80 );
