Removed flex-container class.

--- a/app/views/display/embed_streams.html.erb
+++ b/app/views/display/embed_streams.html.erb
@@ -4,7 +4,7 @@
     <%= render 'partials/google_analytics_init' %>
 </head>
 <body>
-<div class="container-fluid flex-container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12" id="stream-switch-tabs">
             <span>Switch to...</span>
