--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -30,11 +30,6 @@ body {
 
 div {
 
-    &#main-stream {
-        position: fixed;
-        left: 0;
-    }
-
     &#stream-queue {
         display: inline-block;
         position: fixed;
@@ -44,6 +39,19 @@ div {
         overflow-y: hidden;
         text-align: center;
         white-space: nowrap;
+    }
+
+    &.flexbox-column {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &.flexbox-row {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: stretch;
+        align-content: stretch;
     }
 
     &.on-deck-stream {
@@ -61,9 +69,16 @@ h3 {
 }
 
 iframe {
+    &#main-stream-player {
+        order: 1;
+        flex-grow: 4;
+        flex-shrink: 0;
+    }
+
     &#chat {
-        position: fixed;
-        right: 0;
+        order: 2;
+        flex-grow: 1;
+        flex-shrink: 0;
     }
 }
 
