Tweaked UI layout using flexbox. Removed much of the javascript which used to handle this functionality.

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -7,11 +7,11 @@ a {
         font-weight: bold;
         text-decoration: none;
         background-color: $dark-purple;
-        padding: 2px 6px 2px 6px;
+        padding: 0 6px 0 6px;
         border: 1px solid #cccccc;
         border-right-color: #333333;
         border-bottom-color: #333333;
-}
+    }
 
     &.button-inactive {
         @extend .button;
@@ -28,35 +28,15 @@ body {
     font-family: arial;
 }
 
-div {
+body, html {
+    height: 100%;
+    width: 100%;
+}
 
+div {
     &#stream-queue {
-        display: inline-block;
-        position: fixed;
-        bottom: 0;
-        left: 0;
         overflow-x: scroll;
         overflow-y: hidden;
-        text-align: center;
-        white-space: nowrap;
-    }
-
-    &.flexbox-column {
-        display: flex;
-        flex-direction: column;
-    }
-
-    &.flexbox-row {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: stretch;
-        align-content: stretch;
-    }
-
-    &.on-deck-stream {
-        overflow: hidden;
-        flex-basis: 20%;
     }
 }
 
@@ -70,15 +50,15 @@ h3 {
 
 iframe {
     &#main-stream-player {
-        order: 1;
-        flex-grow: 4;
-        flex-shrink: 0;
+        flex: 3 1 auto;
     }
 
     &#chat {
-        order: 2;
-        flex-grow: 1;
-        flex-shrink: 0;
+        flex: 0 0 auto;
+    }
+
+    &.on-deck-stream {
+        flex: 0 0 20%;
     }
 }
 
