--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,10 +1,8 @@
 @import 'variables';
 
 div {
-    &.top-right {
-        background-color: $abyss;
-        top: 0;
-        position: fixed;
-        right: 0;
+    &.menu {
+        text-align: right;
+        flex: 0 0 auto;
     }
 }
