--- a/app/views/display/index.html.erb
+++ b/app/views/display/index.html.erb
@@ -4,7 +4,8 @@
         <%= render 'partials/google_analytics_init' %>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
+            <%= render 'partials/beta_tag' %>
             <h1>Welcome to the TwitchDeck Beta!</h1>
             <h3>What is TwitchDeck?</h3>
             <p>A web application that lets you watch multiple Twitch streams on the same page, at the same time. Inspired by the fantastic <a href="http://www.multitwitch.tv">MultiTwitch</a>, TwitchDeck displays a "primary" streamer in a larger player, with your other streamers displayed below in smaller players, with volume turned down by default.</p>
@@ -31,8 +32,6 @@
             <p>TwitchDeck makes use of the widely-used Google Analytics product to aggregate web site usage data, and as such, is subjected to all of Google's terms and conditions of use, including the use of cookies.</p>
             <p>Google Analytics does not collect personal information about site visitors, as noted in their documentation <%= link_to 'here', 'https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage' %>. Specifically:</p>
             <blockquote cite="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">Important: Google Analytics does not store any personal information about your website users. Read the Google Analytics privacy document for more details.</blockquote>
-
-            <%= render 'partials/beta_tag' %>
         </div>
     </body>
 </html>
